--- a/app/infrastructure/vpc-infra.yaml
+++ b/app/infrastructure/vpc-infra.yaml
@@ -1,8 +1,6 @@
 AWSTemplateFormatVersion: '2010-09-09'
-Description: >
-  Modular VPC infrastructure with public and private subnets,
-  NAT gateways, security groups, and environment separation
-  for dev, staging, and prod.
+Description: |
+  Complete VPC with public, private, Kafka, and data subnets, Internet Gateway, NAT Gateway, security groups, and NACLs.
 
 Parameters:
   EnvironmentName:
@@ -12,11 +10,13 @@ Parameters:
       - dev
       - staging
       - prod
-    Description: Deployment environment name
 
 Resources:
 
-  VPCDev:
+  ########################
+  # VPC
+  ########################
+  VPC:
     Type: AWS::EC2::VPC
     Properties:
       CidrBlock: 10.0.0.0/16
@@ -26,50 +26,9 @@ Resources:
         - Key: Name
           Value: !Sub vpc-${EnvironmentName}
 
-  PublicSubnet1:
-    Type: AWS::EC2::Subnet
-    Properties:
-      VpcId: !Ref VPCDev
-      CidrBlock: 10.0.1.0/24
-      AvailabilityZone: us-east-1a
-      MapPublicIpOnLaunch: true
-      Tags:
-        - Key: Name
-          Value: !Sub public-subnet-1-${EnvironmentName}
-
-  PublicSubnet2:
-    Type: AWS::EC2::Subnet
-    Properties:
-      VpcId: !Ref VPCDev
-      CidrBlock: 10.0.2.0/24
-      AvailabilityZone: us-east-1b
-      MapPublicIpOnLaunch: true
-      Tags:
-        - Key: Name
-          Value: !Sub public-subnet-2-${EnvironmentName}
-
-  PrivateSubnet1:
-    Type: AWS::EC2::Subnet
-    Properties:
-      VpcId: !Ref VPCDev
-      CidrBlock: 10.0.10.0/24
-      AvailabilityZone: us-east-1a
-      MapPublicIpOnLaunch: false
-      Tags:
-        - Key: Name
-          Value: !Sub private-subnet-1-${EnvironmentName}
-
-  PrivateSubnet2:
-    Type: AWS::EC2::Subnet
-    Properties:
-      VpcId: !Ref VPCDev
-      CidrBlock: 10.0.11.0/24
-      AvailabilityZone: us-east-1b
-      MapPublicIpOnLaunch: false
-      Tags:
-        - Key: Name
-          Value: !Sub private-subnet-2-${EnvironmentName}
-
+  ########################
+  # Internet Gateway
+  ########################
   InternetGateway:
     Type: AWS::EC2::InternetGateway
     Properties:
@@ -80,18 +39,106 @@ Resources:
   AttachIGW:
     Type: AWS::EC2::VPCGatewayAttachment
     Properties:
-      VpcId: !Ref VPCDev
+      VpcId: !Ref VPC
       InternetGatewayId: !Ref InternetGateway
 
+  ########################
+  # Public Subnets
+  ########################
+  PublicSubnet1:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref VPC
+      CidrBlock: 10.0.1.0/24
+      AvailabilityZone: us-east-1a
+      MapPublicIpOnLaunch: true
+
+  PublicSubnet2:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref VPC
+      CidrBlock: 10.0.2.0/24
+      AvailabilityZone: us-east-1b
+      MapPublicIpOnLaunch: true
+
+  ########################
+  # Private Subnets (App)
+  ########################
+  PrivateSubnet1:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref VPC
+      CidrBlock: 10.0.10.0/24
+      AvailabilityZone: us-east-1a
+
+  PrivateSubnet2:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref VPC
+      CidrBlock: 10.0.11.0/24
+      AvailabilityZone: us-east-1b
+
+  ########################
+  # Kafka Subnets
+  ########################
+  KafkaSubnet1:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref VPC
+      CidrBlock: 10.0.30.0/24
+      AvailabilityZone: us-east-1a
+
+  KafkaSubnet2:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref VPC
+      CidrBlock: 10.0.31.0/24
+      AvailabilityZone: us-east-1b
+
+  ########################
+  # Data Subnets (RDS)
+  ########################
+  DataSubnet1:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref VPC
+      CidrBlock: 10.0.20.0/24
+      AvailabilityZone: us-east-1a
+
+  DataSubnet2:
+    Type: AWS::EC2::Subnet
+    Properties:
+      VpcId: !Ref VPC
+      CidrBlock: 10.0.21.0/24
+      AvailabilityZone: us-east-1b
+
+  ########################
+  # Elastic IP + NAT Gateway
+  ########################
+  NatEIP:
+    Type: AWS::EC2::EIP
+    Properties:
+      Domain: vpc
+
+  NatGateway:
+    Type: AWS::EC2::NatGateway
+    DependsOn: AttachIGW
+    Properties:
+      SubnetId: !Ref PublicSubnet1
+      AllocationId: !GetAtt NatEIP.AllocationId
+      Tags:
+        - Key: Name
+          Value: !Sub nat-${EnvironmentName}
+
+  ########################
+  # Route Tables
+  ########################
   PublicRouteTable:
     Type: AWS::EC2::RouteTable
     Properties:
-      VpcId: !Ref VPCDev
-      Tags:
-        - Key: Name
-          Value: !Sub public-rt-${EnvironmentName}
+      VpcId: !Ref VPC
 
-  PublicInternetRoute:
+  PublicRoute:
     Type: AWS::EC2::Route
     DependsOn: AttachIGW
     Properties:
@@ -99,62 +146,54 @@ Resources:
       DestinationCidrBlock: 0.0.0.0/0
       GatewayId: !Ref InternetGateway
 
-  PublicSubnetRouteAssociation1:
+  PrivateRouteTable:
+    Type: AWS::EC2::RouteTable
+    Properties:
+      VpcId: !Ref VPC
+
+  PrivateRoute:
+    Type: AWS::EC2::Route
+    DependsOn: NatGateway
+    Properties:
+      RouteTableId: !Ref PrivateRouteTable
+      DestinationCidrBlock: 0.0.0.0/0
+      NatGatewayId: !Ref NatGateway
+
+  ########################
+  # Route Associations
+  ########################
+  PublicSubnetAssoc1:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
       SubnetId: !Ref PublicSubnet1
       RouteTableId: !Ref PublicRouteTable
 
-  PublicSubnetRouteAssociation2:
+  PublicSubnetAssoc2:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
       SubnetId: !Ref PublicSubnet2
       RouteTableId: !Ref PublicRouteTable
 
-  NATGatewayEIP1:
-    Type: AWS::EC2::EIP
-    Properties:
-      Domain: vpc
-
-  NATGateway1:
-    Type: AWS::EC2::NatGateway
-    DependsOn:
-      - NATGatewayEIP1
-      - PublicSubnet1
-    Properties:
-      SubnetId: !Ref PublicSubnet1
-      AllocationId: !GetAtt NATGatewayEIP1.AllocationId
-      Tags:
-        - Key: Name
-          Value: !Sub natgw-${EnvironmentName}
-
-  PrivateRouteTable1:
-    Type: AWS::EC2::RouteTable
-    Properties:
-      VpcId: !Ref VPCDev
-      Tags:
-        - Key: Name
-          Value: !Sub private-rt-${EnvironmentName}
-
-  PrivateRoute:
-    Type: AWS::EC2::Route
-    DependsOn: NATGateway1
-    Properties:
-      RouteTableId: !Ref PrivateRouteTable1
-      DestinationCidrBlock: 0.0.0.0/0
-      NatGatewayId: !Ref NATGateway1
-
-  PrivateSubnetAssociation1:
+  PrivateSubnetAssoc1:
     Type: AWS::EC2::SubnetRouteTableAssociation
     Properties:
       SubnetId: !Ref PrivateSubnet1
-      RouteTableId: !Ref PrivateRouteTable1
+      RouteTableId: !Ref PrivateRouteTable
 
+  PrivateSubnetAssoc2:
+    Type: AWS::EC2::SubnetRouteTableAssociation
+    Properties:
+      SubnetId: !Ref PrivateSubnet2
+      RouteTableId: !Ref PrivateRouteTable
+
+  ########################
+  # Security Groups
+  ########################
   ALBSG:
     Type: AWS::EC2::SecurityGroup
     Properties:
-      GroupDescription: Allow HTTP/HTTPS from internet
-      VpcId: !Ref VPCDev
+      GroupDescription: ALB SG
+      VpcId: !Ref VPC
       SecurityGroupIngress:
         - IpProtocol: tcp
           FromPort: 80
@@ -168,31 +207,91 @@ Resources:
   ECSSG:
     Type: AWS::EC2::SecurityGroup
     Properties:
-      GroupDescription: Allow traffic from ALB only
-      VpcId: !Ref VPCDev
+      GroupDescription: ECS SG
+      VpcId: !Ref VPC
       SecurityGroupIngress:
         - IpProtocol: tcp
           FromPort: 80
           ToPort: 80
           SourceSecurityGroupId: !Ref ALBSG
 
+  KafkaSG:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupDescription: Kafka SG
+      VpcId: !Ref VPC
+      SecurityGroupIngress:
+        - IpProtocol: tcp
+          FromPort: 9092
+          ToPort: 9092
+          CidrIp: 10.0.0.0/16
+        - IpProtocol: tcp
+          FromPort: 2181
+          ToPort: 2181
+          CidrIp: 10.0.0.0/16
+
+  RDSSG:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupDescription: RDS SG
+      VpcId: !Ref VPC
+      SecurityGroupIngress:
+        - IpProtocol: tcp
+          FromPort: 3306
+          ToPort: 3306
+          CidrIp: 10.0.0.0/16
+
+  ########################
+  # Network ACL
+  ########################
+  PrivateNACL:
+    Type: AWS::EC2::NetworkAcl
+    Properties:
+      VpcId: !Ref VPC
+
+  PrivateInbound:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      NetworkAclId: !Ref PrivateNACL
+      RuleNumber: 100
+      Protocol: -1
+      RuleAction: allow
+      Egress: false
+      CidrBlock: 10.0.0.0/16
+
+  PrivateOutbound:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      NetworkAclId: !Ref PrivateNACL
+      RuleNumber: 100
+      Protocol: -1
+      RuleAction: allow
+      Egress: true
+      CidrBlock: 0.0.0.0/0
+
+########################
+# Outputs
+########################
 Outputs:
   VPCId:
-    Description: VPC ID
-    Value: !Ref VPCDev
-
+    Value: !Ref VPC
   PublicSubnets:
-    Description: Public subnets
-    Value: !Join [ ",", [ !Ref PublicSubnet1, !Ref PublicSubnet2 ] ]
-
+    Value: !Join
+      - ','
+      - - !Ref PublicSubnet1
+        - !Ref PublicSubnet2
   PrivateSubnets:
-    Description: Private subnets
-    Value: !Join [ ",", [ !Ref PrivateSubnet1, !Ref PrivateSubnet2 ] ]
-
-  ALBSecurityGroup:
-    Description: ALB security group
-    Value: !Ref ALBSG
-
-  ECSSecurityGroup:
-    Description: ECS security group
-    Value: !Ref ECSSG
+    Value: !Join
+      - ','
+      - - !Ref PrivateSubnet1
+        - !Ref PrivateSubnet2
+  KafkaSubnets:
+    Value: !Join
+      - ','
+      - - !Ref KafkaSubnet1
+        - !Ref KafkaSubnet2
+  DataSubnets:
+    Value: !Join
+      - ','
+      - - !Ref DataSubnet1
+        - !Ref DataSubnet2
