--- a/app/services/quiz-service/buildspec.yml
+++ b/app/services/quiz-service/buildspec.yml
@@ -4,14 +4,13 @@ phases:
   pre_build:
     commands:
       - aws ecr get-login-password --region us-east-1 |
-        docker login --username AWS --password-stdin E744699944198.dkr.ecr.us-east-1.amazonaws.com/quiz-service
-  build:
+      - docker login --username AWS --password-stdin 744699944198.dkr.ecr.us-east-1.amazonaws.com/quiz-service
     commands:
       - docker build -t quiz-service .
-      - docker tag quiz-service:latest E744699944198.dkr.ecr.us-east-1.amazonaws.com/quiz-service:latest
+      - docker tag quiz-service:latest 744699944198.dkr.ecr.us-east-1.amazonaws.com/quiz-service:latest
   post_build:
     commands:
-      - docker push E744699944198.dkr.ecr.us-east-1.amazonaws.com/quiz-service:latest
+      - docker push 744699944198.dkr.ecr.us-east-1.amazonaws.com/quiz-service:latest
 artifacts:
   files:
     - imagedefinitions.json
