Add Dockerfiles and buildspecs for chat, document-reader, quiz, stt, and tts services; include dependency installation and unit test execution

--- a/app/services/chat-service/buildspec.yml
+++ b/app/services/chat-service/buildspec.yml
@@ -1,18 +1,26 @@
 version: 0.2
 
 phases:
+  install:
+    commands:
+      - echo Installing dependencies...
+      - pip install -r requirements.txt
   pre_build:
     commands:
-      - aws ecr get-login-password --region us-east-1 |
-        docker login --username AWS --password-stdin 744699944198.dkr.ecr.us-east-1.amazonaws.com/chat-service-repository
+      - echo Logging in to Amazon ECR...
+      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 44699944198.dkr.ecr.us-east-1.amazonaws.com/chat-service-repository
   build:
     commands:
+      - echo Running unit tests...
+      - pytest tests/
+      - echo Building Docker image...
       - docker build -t chat-service .
-      - docker tag chat-service:latest 744699944198.dkr.ecr.us-east-1.amazonaws.com/chat-service-repository:latest
+      - docker tag chat-service:latest 44699944198.dkr.ecr.us-east-1.amazonaws.com/chat-service-repository:latest
   post_build:
     commands:
-      - docker push 744699944198.dkr.ecr.us-east-1.amazonaws.com/chat-service-repository:latest
+      - echo Pushing Docker image to ECR...
+      - docker push 44699944198.dkr.ecr.us-east-1.amazonaws.com/chat-service-repository:latest
 
 artifacts:
   files:
-    - imagedefinitions.json
+    - '**/*'
