--- a/app/services/document-reader/buildspec.yml
+++ b/app/services/document-reader/buildspec.yml
@@ -1,17 +1,26 @@
 version: 0.2
 
 phases:
+  install:
+    commands:
+      - echo Installing dependencies...
+      - pip install -r requirements.txt
   pre_build:
     commands:
-      - aws ecr get-login-password --region us-east-1 |
-        docker login --username AWS --password-stdin E744699944198.dkr.ecr.us-east-1.amazonaws.com/document-reader-service
+      - echo Logging in to Amazon ECR...
+      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 744699944198.dkr.ecr.us-east-1.amazonaws.com/document-reader-service
   build:
     commands:
+      - echo Running unit tests...
+      - pytest tests/
+      - echo Building Docker image...
       - docker build -t document-reader-service .
-      - docker tag document-reader-service:latest E744699944198.dkr.ecr.us-east-1.amazonaws.com/document-reader-service:latest
+      - docker tag document-reader-service:latest 744699944198.dkr.ecr.us-east-1.amazonaws.com/document-reader-service:latest
   post_build:
     commands:
-      - docker push E744699944198.dkr.ecr.us-east-1.amazonaws.com/document-reader-service:latest
+      - echo Pushing Docker image to ECR...
+      - docker push 744699944198.dkr.ecr.us-east-1.amazonaws.com/document-reader-service:latest
+
 artifacts:
   files:
-    - imagedefinitions.json
+    - '**/*'
