--- a/app/services/stt-service/buildspec.yml
+++ b/app/services/stt-service/buildspec.yml
@@ -1,18 +1,26 @@
 version: 0.2
 
 phases:
+  install:
+    commands:
+      - echo Installing dependencies...
+      - pip install -r requirements.txt
   pre_build:
     commands:
-      - aws ecr get-login-password --region us-east-1 |
-        docker login --username AWS --password-stdin 744699944198.dkr.ecr.us-east-1.amazonaws.com/stt-service-repository
+      - echo Logging in to Amazon ECR...
+      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 744699944198.dkr.ecr.us-east-1.amazonaws.com/stt-service-repository
   build:
     commands:
+      - echo Running unit tests...
+      - pytest tests/
+      - echo Building Docker image...
       - docker build -t stt-service .
       - docker tag stt-service:latest 744699944198.dkr.ecr.us-east-1.amazonaws.com/stt-service-repository:latest
   post_build:
     commands:
+      - echo Pushing Docker image to ECR...
       - docker push 744699944198.dkr.ecr.us-east-1.amazonaws.com/stt-service-repository:latest
 
 artifacts:
   files:
-    - imagedefinitions.json
+    - '**/*'
